tree-sitter-mtgql/test/corpus/identity.txt
====================
wubrg
====================

identity=wubgr

--------------------

(query
  (unary_statement
    (color_identity_condition
      (identity_filter)
      (equal_operator)
      (color_combination))))

====================
named color word
====================

ci:raugrin

--------------------

(query
  (unary_statement
    (color_identity_condition
      (identity_filter)
      (equal_operator)
      (color_combination))))

====================
colorless
====================

id=c

--------------------

(query
  (unary_statement
    (color_identity_condition
      (identity_filter)
      (equal_operator)
      (color_combination))))

====================
color count
====================

commander<5

--------------------

(query
  (unary_statement
    (color_identity_condition
      (identity_filter)
      (number_operator)
      (color_count))))

====================
invalid color count
:error
====================

commander>=6

--------------------
====================
invalid color name
:error
====================

id:melon

--------------------
====================
invalid operator spacing
:error
====================

identity :3

--------------------

====================
invalid term spacing
:error
====================

id: 3

--------------------
