tree-sitter-mtgql/test/corpus/power.txt
====================
number comparison
====================

pow<4

--------------------

(query
  (unary_statement
    (power_condition
      (power_filter)
      (number_operator)
      (natural_number))))

====================
alias with equal op
====================

power=40

--------------------

(query
  (unary_statement
    (power_condition
      (power_filter)
      (equal_operator)
      (natural_number))))

====================
compared to toughness
====================

pow!=tou

--------------------

(query
  (unary_statement
    (power_condition
      (power_filter)
      (number_operator)
      (toughness_value))))

====================
invalid operator spacing
:error
====================

pow :3

--------------------

====================
invalid term spacing
:error
====================

pow: 3

--------------------
