tree-sitter-mtgql/test/corpus/unary.txt
===================
simple unary
===================

mv=3

-------------------

(query
  (unary_statement
    (cmc_condition
      (cmc_filter)
      (equal_operator)
      (number))))

===================
unary with operator
===================

-mv:3

----

(query
  (unary_statement
    (cmc_condition
      (cmc_filter)
      (equal_operator)
      (number))))

===================
double unary
:error
===================

--mv:3

-------------------
